Search Pagination, JWT, Register, Login

--- a/BlazorEcommerce/Server/appsettings.json
+++ b/BlazorEcommerce/Server/appsettings.json
@@ -3,6 +3,10 @@
     "DefaultConnection": "server=PC-MIRO1\\SQLEXPRESS;database=blazorecommerce;trusted_connection=true;TrustServerCertificate=true;"
   },
 
+  "AppSettings": {
+    "Token":  "ecommerce_secret_key"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
